<resources>
    <string name="app_name">Headpod v1.0</string>
    <string name="str_en">Inglés</string>
    <string name="str_es">Español</string>
    <string-array name="languages">
        <item>@string/str_en</item>
        <item>@string/str_es</item>

    </string-array>
    <string name="salir_pulsa_dos_veces">Presiona otra vez ATRÁS para salir</string>
    <string name="descripcion_logo">Logo</string>
    <string name="descripcion_image">Imagen png</string>
    <string name="descripcion_button">Imagen del boton</string>
    <string name="descripcion_nino_senal_sensor">Imagen niño, señal y sensor</string>
    <string name="descripcion_buscando_sensor">Imagen buscando sensor</string>
    <string name="descripcion_img_buscar_paciente">Imagen de un ojo que simboliza buscar paciente</string>
    <string name="login">Inicio de sesión</string>
    <string name="register">Registro de terapeuta</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="password2">Confirmar contraseña</string>
    <string name="forget_password"><u>¿Olvidaste la contraseña?</u></string>
    <string name="no_tienes_usuario">¿No eres usuario?, <u>registrate</u></string>
    <string name="subtitulo_registro">Para poder gestionar pacientes necesitará crear una cuenta de usuario profesional</string>
    <string name="titulo_inicial">Sistema de análisis del movimiento</string>
    <string name="aviso_registro">Para poder registrar pacientes necesitará crear una cuenta de usuario</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="password1_vacia">La contraseña no debe estar vacía</string>
    <string name="password2_vacia">Confrimar contraseña no debe estar vacía</string>
    <string name="password_distintas">Las contraseñas no coinciden</string>
    <string name="email_vacio">El correo no debe estar vacío</string>
    <string name="email_exist">Este correo ya existe</string>
    <string name="email_fail">El correo debe ser una dirección válida</string>
    <string name="error_bd">Error en la base de datos. Vuelva a intentarlo más tarde</string>
    <string name="wait_please">Espere por favor</string>
    <string name="send_email_success">Correo enviado con exito</string>
    <string name="send_email_fail">Envio de correo fallido...</string>
    <string name="register_success">Registro realizado con éxito, revise su correo electrónico desde su dispositivo android para activar su cuenta</string>
    <string name="register_fail">Registro fallido, no se ha podido enviar el correo de confirmación. Intentelo más tarde</string>
    <string name="register_fail_total">Registro fallido, error inesperado</string>
    <string name="success_restablecer">Revise su correo para poder restablecer su contraseña.</string>
    <string name="fail_restablecer">No se ha podido enviar el correo para restablecer contraseña. Intentelo más tarde.</string>
    <string name="success_changed_password">La contraseña ha sido cambiada con éxito, puede iniciar sesión.</string>
    <string name="repeat_new_empty">Repetir contraseña no debe estar vacía</string>
    <string name="conexion_perdida">Conexión perdida, deberá vincular nuevamente el dispositivo</string>
    <string name="restablecer_password_title">Restablecer contraseña</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="repeat_new_password">Repite nueva contraeña</string>
    <string name="guardar"> Guardar  </string>
    <string name="antigua_password">Actual contraseña</string>
    <string name="cambiar">Cambiar</string>
    <string name="fail_password_actual">La contraseña actual no coincide</string>
    <string name="success_changed_password_perfil">La contraseña se ha cambiado con exito</string>
    <string name="aviso_eliminar_terapeuta">¿Estás seguro de eliminar tu cuenta?, al hacerlo perderas toda la información de tus pacientes y mediciones</string>
    <string name="success_delete_terapeuta">El usuario %1$s ha sido eliminado con éxito</string>
    <string name="email_subject_registro">Registro realizado con éxito en Headpod</string>
    <string name="email_subject_restablecer_password">Restablecer contraseña en Headpod</string>
    <string name="activar_cuenta">Activar cuenta</string>
    <string name="restabler_password">Restablecer contraseña</string>
    <string name="email_body_registro">Pulse sobre el siguiente enlace para activar su cuenta y escoga la aplicación de Headpod: <br /></string>
    <string name="email_body_restablecer_password">Pulse sobre el siguiente enlace para restablecer la contraseña y escoga la aplicación de Headpod: <br /></string>
    <string name="title_activity_activar_login">Headpod</string>
    <string name="title_activity_restablecer_password">Headpod</string>
    <string name="error_login">Error en iniciar sesión...</string>
    <string name="error_email_no_existe">El correo no existe, debes registrarte antes</string>
    <string name="error_password_incorrecta">La contraseña es incorrecta</string>
    <string name="cuenta_no_validada">La cuenta no ha sido validada, revisa tu correo para activarla.</string>
    <string name="cuenta_activada">La cuenta ha sido activada, puede iniciar sesión</string>
    <string name="perfil">Perfil</string>
    <string name="titulo_perfil_terapeuta">Perfil de terapeuta</string>
    <string name="alias">Alias (Ej:Terapeuta)</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="preferencias_perfil">Preferencias:</string>
    <string name="anadirImagen"><u>Añadir imagen</u></string>
    <string name="borrarImagen"><u>Borrar imagen</u></string>
    <string name="tiempo_sesiones">Tiempo predeterminado para las sesiones de medición</string>
    <string name="desplegable_perfil_terapeuta">Despliegue y escoga</string>
    <string name="cambiar_password"><u>Cambiar contraseña</u></string>
    <string name="eliminar_cuenta"><u>Eliminar cuenta</u></string>
    <string name="sin_alias">Sin alias</string>
    <string name="exito_guardar">Cambios realizados con éxito</string>
    <string name="fail_guardar">Fallo al realizar los cambios, intentelo más tarde</string>
    <string name="button_login">Iniciar sesión</string>
    <string name="button_medicion">Iniciar medición</string>
    <string name="button_registrate">Regístrate</string>
    <string name="button_enviar">Enviar</string>
    <string name="button_guardar">Guardar</string>
    <string name="inicio">Inicio</string>
    <string name="avatar">Datos en tiempo real</string>
    <string name="cambiar_terapeuta">Cambiar Terapeuta </string>
    <string name="nuevo_paciente">Nuevo paciente</string>
    <string name="mis_pacientes">Mis pacientes</string>
    <string name="desvincular_sensor">Devincular sensor</string>
    <string name="vincular_sensor">Vincular sensor</string>
    <string name="preferencias">Preferencias</string>
    <string name="cambiar_idioma">Cambiar idioma</string>
    <string name="cerrar_app">Cerrar App</string>
    <string name="gestion_pacientes">Gestión de pacientes</string>
    <string name="conectividad_sensor">Conectividad sensor</string>
    <string name="titulo_home">Inicio</string>
    <string name="Seleccione_op">Seleccione una opción</string>
    <string name="op_avatar">Datos en tiempo real</string>
    <string name="op_inicar_medicion">Iniciar medición</string>
    <string name="op_mis_pacientes">Mis pacientes</string>
    <string name="cargando">Recibiendo datos...</string>
    <string name="tiempo_op1">15 minutos</string>
    <string name="tiempo_op2">30 minutos</string>
    <string name="tiempo_op3">45 minutos</string>
    <string name="tiempo_op4">60 minutos</string>
    <string name="tiempo_op5">120 minutos</string>
    <string name="inicar_medicion">Iniciar medición</string>
    <string name="medicion_con_hp">Con Headpod</string>
    <string name="medicion_sin_hp">Sin Headpod</string>
    <string name="ver_foto_ejemplo">Ver foto con ejemplo</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="uno">1.-</string>
    <string name="dos">2.-</string>
    <string name="uno_medicion_comparativa">Ajuste el sensor tras la oreja derecha con el gancho.
   (ver foto). Si no puede utilizar el gancho.
   Fije el sensor con una tirita. (ver foto)</string>
    <string name="fije_sensor">Fije el sensor</string>
    <string name="parentisis_ver_foto">(ver foto</string>
    <string name="dos_medicion_comparativa">
    Seleccione el tiempo que desea medir (Opcional)
    </string>
    <string name="tres">3.-</string>
    <string name="tres_medicion_comparativa">
       Seleccione el paciente con el que va a realizar la medición. En caso de no existir ninguno debera crear un paciente y seleccionarlo.
    </string>
    <string name="tres_select_paciente"><b><u>Seleccionar Paciente</u></b></string>
    <string name="tres_paciente_seleccionado">El paciente seleccionado es  </string>
    <string name="cuatro">4.-</string>
    <string name="cuatro_medicion_comparativa">
        Asegúrese que la cabeza se encuentra erguida en posición neutral y pulse “MEDIR” en la siguiente pantalla
    </string>
    <string name="cabeza">cabeza</string>
    <string name="neutral">neutral</string>
    <string name="terapeuta_sin_asignar">Terapeuta sin asignar</string>
    <string name="paciente_sin_asignar">Paciente sin asignar</string>
    <string name="guardar_terapeuta">Guardar terapeuta</string>
    <string name="guardar_paciente">Guardar paciente</string>
    <string name="estadisticas">Estadísticas</string>
    <string name="pestana_en_tiempo_real">En tiempo real</string>
    <string name="btn_medir">Medir</string>
    <string name="uno_con_headpod">Coloque el headpod y el sensor</string>
    <string name="select_avatar_2d">Avatar en 2D</string>
    <string name="select_avatar_3D">Avatar en 3D</string>
    <string name="titulo_datos_en_tiempo_real">Datos en tiempo real</string>
    <string name="medicion_en_tiempo_real">Medición en tiempo real</string>
    <string name="convulsiones">C=</string>
    <string name="velocidad_media">Vm=</string>
    <string name="btn_avatar_izquierda_inicio">Inicio</string>
    <string name="btn_avatar_derecha_reset">Reset</string>
    <string name="btn_avatar_izquierda_reanudar">Reanudar</string>
    <string name="btn_avatar_derecha_parar">Parar</string>
    <string name="title_activity_login">Sign in</string>
    <plurals name="dias">
        <item quantity="one">día</item>
        <item quantity="other">días</item>
    </plurals>
    <plurals name="horas">
        <item quantity="one">hora</item>
        <item quantity="other">horas</item>
    </plurals>
    <string name="minutos">minutos</string>
    <string name="min">min</string>
    <string name="menos">-</string>
    <string name="otro_tiempo"><u>Seleccionar \notro tiempo</u></string>
    <string name="tiempo_max">Tiempo: ∞ \n(máximo permitido) </string>
    <string name="tiempo_dos_puntos">Tiempo: </string>
    <string name="indefinido">∞</string>
    <string name="establecer_tiempo">Establecer tiempo  \n(Días : Horas : Minutos)</string>
    <string name="buscar_paciente">Buscar paciente</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="edad">Edad</string>
    <string name="selecciona_ano_nacimiento">Selecciona el año de nacimiento:</string>
    <string name="peso">Peso</string>
    <string name="anadir">Añadir</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string name="diagnostico"><u>Diagnóstico:</u></string>
    <string name="select_aviso_paciente">Es necesario <b><u>seleccionar un paciente</u></b> para realizar la medición. </string>
    <string name="un_paciente">un paciente</string>
    <string name="kg">Kg</string>
</resources>