<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/blanco"
    tools:context="com.siestasystemheadpod.headpodv10.RememberPasswordActivity">



    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:contentDescription="@string/descripcion_logo"

        android:adjustViewBounds="true"
        android:scaleType="centerCrop"

        android:src="@drawable/logo_headpod_con_leyenda"


        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <!--android:textStyle="bold"-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/restablecer_password_title"
        android:textColor="@color/ColorSecundadrio"
        android:textSize="@dimen/text_size_title"
        android:id="@+id/tituloInicial"
        android:layout_below="@+id/imageLogo"
        android:layout_marginTop="23dp"

        android:gravity="center_horizontal"

        android:layout_alignLeft="@+id/imageLogo"
        android:layout_alignStart="@+id/imageLogo"
        android:layout_alignRight="@+id/imageLogo"
        android:layout_alignEnd="@+id/imageLogo" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tituloInicial"
        android:layout_marginTop="20dp"

        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"


        android:id="@+id/linearLayout1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"

            android:textSize="@dimen/text_size_subtitle"
            android:ems="10"
            android:hint="@string/email"
            android:textColor="@color/colorPrimary"
            android:id="@+id/email_remember"
            /><!--android:textColorHint="@color/colorPrimary"-->
    </LinearLayout>




    <ImageButton
        android:paddingTop="50sp"
        android:contentDescription="@string/descripcion_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:onClick="doSendEmail"
        android:src="@drawable/btn_efectos"
        android:background="@color/blanco"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/button_enviar"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_standard"
        android:gravity="center"

        android:background="@drawable/txt_background_efecto"
        android:id="@+id/enviar_remember"
        android:layout_below="@+id/imageButton"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
