<!--
Aquí se montara la interfaz grafica de medir con y sin headpod.
En tiempo de ejecución eligira la adecuada. Aquí se ha montado la de sin_headpod.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/contenedor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"

    android:background="#ffffff"
    tools:context=".fragments.MedicionPlantillaPasosFragment">


<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:text="@string/medicion_sin_hp"
    android:textColor="@color/ColorSecundadrio"
    android:textSize="@dimen/text_size_title"
    android:id="@+id/tituloMenuHome"
    android:visibility="gone"
    android:layout_marginTop="16dp"
    android:gravity="center_horizontal"
    android:layout_alignParentStart="true"
    android:layout_alignParentEnd="true" />

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/tituloMenuHome"
    android:fadeScrollbars="false"
    android:layout_gravity="center"
    android:id="@+id/scrollView"
    android:fillViewport="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayoutPadre"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        >

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"
            android:gravity="start"
            android:id="@+id/linearLayout5">

            <TextView
                android:id="@+id/Uno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_standard"
                android:ems="1"
                android:text="@string/uno"
                android:textColor="@color/ColorSecundadrio"
                />

            <TextView
                android:id="@+id/txtUnoMedicion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/text_size_standard"
                android:ems="10"
                android:gravity="center_vertical"
                android:text="@string/uno_medicion_comparativa"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:layout_toEndOf="@+id/Uno"
                android:layout_alignParentTop="true"
               />

        </RelativeLayout>


        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"
            android:gravity="start"
            android:id="@+id/selectTime">

            <TextView
                android:id="@+id/Dos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_standard"
                android:ems="1"
                android:text="@string/dos"
                android:textColor="@color/ColorSecundadrio"
                />


            <TextView
                android:id="@+id/txtDosMedicion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/text_size_standard"
                android:ems="10"
                android:text="@string/dos_medicion_comparativa"
                android:layout_toEndOf="@+id/Dos"
                android:textColor="@color/colorPrimary"
                />




        </RelativeLayout>



        <RelativeLayout
            android:id="@+id/contenedorSelect"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            >

            <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                android:id="@+id/discrete1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dsb_min="1"
                app:dsb_max="51"
                app:dsb_value="51"
                app:dsb_indicatorTextAppearance="@style/CustomFloaterTextAppearance"
                android:layout_toStartOf="@+id/txtmaximo"

                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorPrimary"
                android:text="@string/menos"
                android:id="@+id/txtminimo"
                android:layout_above="@+id/otro_tiempo"
                android:layout_alignParentStart="true" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorPrimary"
                android:text="@string/indefinido"
                android:id="@+id/txtmaximo"
                android:layout_alignBottom="@+id/discrete1"
                android:layout_alignParentEnd="true" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/discrete1"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:textSize="12dp"
                android:textColor="@color/ColorSecundadrio"
                android:text="@string/otro_tiempo"
                android:id="@+id/otro_tiempo"
                /><!--  android:textAppearance="?android:attr/textAppearanceSmall"-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/discrete1"
                android:layout_alignParentEnd="true"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorPrimary"
                android:text="@string/tiempo_max"
                android:id="@+id/tiempoSelect"
                />

        </RelativeLayout>




        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:layout_marginTop="16dp"
            android:gravity="start"
            android:id="@+id/RelativeLayoutSelect">



            <TextView
                android:id="@+id/Tres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_standard"
                android:ems="1"
                android:text="@string/tres"
                android:textColor="@color/ColorSecundadrio"
                />

            <TextView
                android:id="@+id/txtTresMedicion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textSize="@dimen/text_size_standard"
                android:ems="10"
                android:gravity="center_vertical"
                android:text="@string/tres_medicion_comparativa"
                android:textColor="@color/colorPrimary"

                android:layout_toEndOf="@+id/Tres"

              />

            <TextView
                android:id="@+id/txtTresMedicionSeleccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"

                android:textSize="@dimen/text_size_standard"
                android:ems="10"
                android:gravity="center_horizontal"
                android:text="@string/tres_select_paciente"
                android:textColor="@color/ColorSecundadrio"

                android:layout_below="@id/txtTresMedicion"


                />

            <TextView
                android:id="@+id/txtTresMedicionPacienteSeleccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"

                android:textSize="@dimen/text_size_standard"
                android:ems="10"
                android:gravity="center_horizontal"
                android:text="@string/tres_paciente_seleccionado"
                android:textColor="@color/colorPrimary"

                android:layout_below="@id/txtTresMedicionSeleccion"


                />


            <TextView
                android:id="@+id/txtTresMedicionNombrePaciente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textSize="@dimen/text_size_standard"
                android:ems="10"
                android:gravity="center_horizontal"

                android:textColor="@color/ColorSecundadrio"

                android:layout_below="@id/txtTresMedicionPacienteSeleccion"


                />




        </RelativeLayout>





        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:layout_marginTop="16dp"
            android:gravity="start"
            android:id="@+id/RelativeLayoutSelectPaciente">



            <TextView
                android:id="@+id/Cuatro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_standard"
                android:ems="1"
                android:text="@string/cuatro"
                android:textColor="@color/ColorSecundadrio"
                />

            <TextView
                android:id="@+id/txtCuatroMedicion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textSize="@dimen/text_size_standard"
                android:ems="10"
                android:gravity="center_vertical"
                android:text="@string/cuatro_medicion_comparativa"
                android:textColor="@color/colorPrimary"

                android:layout_toEndOf="@+id/Cuatro"

                />









        </RelativeLayout>



        <ImageView
            android:id="@+id/cara_sin_con_hp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:contentDescription="@string/descripcion_button"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"

            android:src="@drawable/calibracion_sin_headpod"
            android:layout_gravity="center_horizontal"
            />

        <ImageView
            android:layout_marginTop="2dp"
            android:contentDescription="@string/descripcion_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnMedir"
            android:src="@drawable/btn_efectos"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/txtMedir"
            android:layout_width="67dp"
            android:layout_height="match_parent"
            android:background="@drawable/txt_background_efecto"
            android:textSize="@dimen/text_size_standard"
            android:text="@string/siguiente"
            android:textColor="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal" />


    </LinearLayout>
</ScrollView>

</RelativeLayout>


<!--
     style="@android:style/Widget.ProgressBar.Horizontal"

  android:layout_alignTop="@+id/txtmaximo"
                android:layout_toStartOf="@+id/txtmaximo"

         <SeekBar

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:id="@+id/seekBar"

                android:layout_alignParentStart="true" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:textAppearance="?android:attr/textAppearanceSmall"

                android:text="@string/indefinido"
                android:hint="@string/minutos"

                android:id="@+id/editTextTime"

                android:layout_alignBottom="@id/seekBar"
                android:layout_toEndOf="@id/seekBar" />







            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"

                android:text="@string/min"
                android:id="@+id/txtUnitTime"

                android:layout_alignBottom="@id/seekBar"
                android:layout_toEndOf="@+id/editTextTime" />


-->